--- a/.evergreen/evergreen.yml
+++ b/.evergreen/evergreen.yml
@@ -256,10 +256,10 @@ functions:
           export FLE_AZURE_CLIENT_SECRET=${FLE_AZURE_CLIENT_SECRET}
           export FLE_GCP_EMAIL=${FLE_GCP_EMAIL}
           export FLE_GCP_PRIVATE_KEY=${FLE_GCP_PRIVATE_KEY}
-          . ./evergreen/set-virtualenv.sh
-          . ./evergreen/set-temp-fle-aws-creds.sh
+          . ./.evergreen/set-virtualenv.sh
+          . ./.evergreen/set-temp-fle-aws-creds.sh
           ${PREPARE_SHELL}
-          SSL=${SSL} OS=${OS} evergreen/add-certs-if-needed.sh
+          SSL=${SSL} OS=${OS} .evergreen/add-certs-if-needed.sh
           AUTH=${AUTH} \
             SSL=${SSL} \
             MONGODB_URI="${MONGODB_URI}" \
@@ -268,7 +268,7 @@ functions:
             COMPRESSOR=${COMPRESSOR} \
             CLIENT_PEM=${DRIVERS_TOOLS}/.evergreen/x509gen/client.pem \
             FRAMEWORK=${FRAMEWORK} \
-            evergreen/run-tests.sh
+            .evergreen/run-tests.sh
           echo "Skipping certificate removal..."
 
   run-atlas-connectivity-tests:
@@ -279,7 +279,7 @@ functions:
         working_dir: mongo-csharp-driver
         script: |
           # DO NOT ECHO WITH XTRACE (which PREPARE_SHELL does)
-          ATLAS_FREE="${ATLAS_FREE}" ATLAS_FREE_SRV="${ATLAS_FREE_SRV}" ATLAS_REPLICA="${ATLAS_REPLICA}" ATLAS_REPLICA_SRV="${ATLAS_REPLICA_SRV}" ATLAS_SHARDED="${ATLAS_SHARDED}" ATLAS_SHARDED_SRV="${ATLAS_SHARDED_SRV}" ATLAS_TLS11="${ATLAS_TLS11}" ATLAS_TLS11_SRV="${ATLAS_TLS11_SRV}" ATLAS_TLS12="${ATLAS_TLS12}" ATLAS_TLS12_SRV="${ATLAS_TLS12_SRV}" evergreen/run-atlas-connectivity-tests.sh
+          ATLAS_FREE="${ATLAS_FREE}" ATLAS_FREE_SRV="${ATLAS_FREE_SRV}" ATLAS_REPLICA="${ATLAS_REPLICA}" ATLAS_REPLICA_SRV="${ATLAS_REPLICA_SRV}" ATLAS_SHARDED="${ATLAS_SHARDED}" ATLAS_SHARDED_SRV="${ATLAS_SHARDED_SRV}" ATLAS_TLS11="${ATLAS_TLS11}" ATLAS_TLS11_SRV="${ATLAS_TLS11_SRV}" ATLAS_TLS12="${ATLAS_TLS12}" ATLAS_TLS12_SRV="${ATLAS_TLS12_SRV}" .evergreen/run-atlas-connectivity-tests.sh
 
   run-gssapi-auth-tests:
     - command: shell.exec
@@ -291,7 +291,7 @@ functions:
             AUTH_HOST="${AUTH_HOST}" \
             AUTH_GSSAPI="${AUTH_GSSAPI}" \
             FRAMEWORK=${FRAMEWORK} \
-            evergreen/run-gssapi-auth-tests.sh
+            .evergreen/run-gssapi-auth-tests.sh
 
   run-plain-auth-tests:
     - command: shell.exec
@@ -300,7 +300,7 @@ functions:
         working_dir: mongo-csharp-driver
         script: |
           ${PREPARE_SHELL}
-          MONGODB_URI="${plain_auth_mongodb_uri}" evergreen/run-plain-auth-tests.sh
+          MONGODB_URI="${plain_auth_mongodb_uri}" .evergreen/run-plain-auth-tests.sh
 
   add-aws-auth-variables-to-file:
     - command: shell.exec
@@ -349,7 +349,7 @@ functions:
             PASS=$(urlencode "${iam_auth_ecs_secret_access_key}")
             MONGODB_URI="mongodb://$USER:$PASS@localhost"
           EOF
-          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} evergreen/run-mongodb-aws-test.sh
+          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} .evergreen/run-mongodb-aws-test.sh
 
   run-aws-auth-test-with-assume-role-credentials:
     - command: shell.exec
@@ -382,7 +382,7 @@ functions:
             SESSION_TOKEN=$(urlencode $SESSION_TOKEN)
             MONGODB_URI="mongodb://$USER:$PASS@localhost"
           EOF
-          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} DRIVERS_TOOLS=${DRIVERS_TOOLS} evergreen/run-mongodb-aws-test.sh
+          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} DRIVERS_TOOLS=${DRIVERS_TOOLS} .evergreen/run-mongodb-aws-test.sh
 
   run-aws-auth-test-with-aws-EC2-credentials:
     - command: shell.exec
@@ -407,7 +407,7 @@ functions:
           cat <<'EOF' > "${PROJECT_DIRECTORY}/prepare_mongodb_aws.sh"
             MONGODB_URI="mongodb://localhost"
           EOF
-          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} evergreen/run-mongodb-aws-test.sh
+          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} .evergreen/run-mongodb-aws-test.sh
 
   run-aws-auth-test-with-aws-credentials-as-environment-variables:
     - command: shell.exec
@@ -428,7 +428,7 @@ functions:
         working_dir: mongo-csharp-driver
         script: |
           ${PREPARE_SHELL}
-          evergreen/run-mongodb-aws-test.sh
+          .evergreen/run-mongodb-aws-test.sh
 
   run-aws-auth-test-with-aws-credentials-and-session-token-as-environment-variables:
     - command: shell.exec
@@ -451,7 +451,7 @@ functions:
         working_dir: mongo-csharp-driver
         script: |
           ${PREPARE_SHELL}
-          evergreen/run-mongodb-aws-test.sh
+          .evergreen/run-mongodb-aws-test.sh
 
   run-atlas-data-lake-test:
     - command: shell.exec
@@ -460,7 +460,7 @@ functions:
         working_dir: mongo-csharp-driver
         script: |
           ${PREPARE_SHELL}
-          evergreen/run-atlas-data-lake-test.sh
+          .evergreen/run-atlas-data-lake-test.sh
 
   run-ocsp-test:
     - command: shell.exec
@@ -472,14 +472,14 @@ functions:
           OCSP_TLS_SHOULD_SUCCEED="${OCSP_TLS_SHOULD_SUCCEED}" \
             OCSP_ALGORITHM=${OCSP_ALGORITHM} \
             SSL="ssl" \
-            evergreen/add-certs-if-needed.sh
+            .evergreen/add-certs-if-needed.sh
           set +o xtrace
           AUTH="${AUTH}" \
             SSL="ssl" \
             TOPOLOGY="${TOPOLOGY}" \
             MONGODB_URI="${MONGODB_URI}" \
             OCSP_TLS_SHOULD_SUCCEED="${OCSP_TLS_SHOULD_SUCCEED}" \
-              evergreen/run-tests.sh
+              .evergreen/run-tests.sh
           echo "Skipping certificate removal..."
 
   run-valid-ocsp-server-ca-responder:
@@ -487,7 +487,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
-          evergreen/prepare-ocsp.sh
+          .evergreen/prepare-ocsp.sh
     - command: shell.exec
       params:
         background: true
@@ -505,7 +505,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
-          evergreen/prepare-ocsp.sh
+          .evergreen/prepare-ocsp.sh
     - command: shell.exec
       params:
         background: true
@@ -523,7 +523,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
-          evergreen/prepare-ocsp.sh
+          .evergreen/prepare-ocsp.sh
     - command: shell.exec
       params:
         background: true
@@ -543,7 +543,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
-          evergreen/prepare-ocsp.sh
+          .evergreen/prepare-ocsp.sh
     - command: shell.exec
       params:
         background: true
@@ -566,7 +566,7 @@ functions:
         working_dir: mongo-csharp-driver
         script: |
           # DO NOT ECHO WITH XTRACE (which PREPARE_SHELL does)
-          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} evergreen/publish.sh
+          PROJECT_DIRECTORY=${PROJECT_DIRECTORY} .evergreen/publish.sh
 
   cleanup:
     - command: shell.exec
@@ -598,7 +598,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
-          for i in $(find ${DRIVERS_TOOLS}/.evergreen ${PROJECT_DIRECTORY}/evergreen -name \*.sh); do
+          for i in $(find ${DRIVERS_TOOLS}/.evergreen ${PROJECT_DIRECTORY}/.evergreen -name \*.sh); do
             cat $i | tr -d '\r' > $i.new
             mv $i.new $i
           done
@@ -610,7 +610,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
-          for i in $(find ${DRIVERS_TOOLS}/.evergreen ${PROJECT_DIRECTORY}/evergreen -name \*.sh); do
+          for i in $(find ${DRIVERS_TOOLS}/.evergreen ${PROJECT_DIRECTORY}/.evergreen -name \*.sh); do
             chmod +x $i
           done
 
@@ -642,7 +642,7 @@ tasks:
       commands:
         - func: exec-script
           vars:
-            file: "evergreen/compile.sh"
+            file: ".evergreen/compile.sh"
         # - func: upload-build
 
     - name: test
